--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
    <header class="main-header">
@@ -10,12 +13,12 @@
            <a class="header-logo"><img src="img/icon/logo-technomart.svg" alt="Логотип магазина ТЕХНОМАРТ"></a>
            <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
               <label class="visually-hidden" for="header-search">Поиск</label>
-              <input type="text" class="search-input" placeholder="Поиск:" id="header-search">
+              <input type="search" class="search-input" placeholder="Поиск:" id="header-search">
            </form>
            <ul class="header-list">
                <li><a href="#">Закладки: <span>0</span></a></li>
                <li><a href="#">Корзина: <span>0</span></a></li>
-               <li><a href="#">Оформить заказ</a></li>
+               <li><a class="btn-order" href="#">Оформить заказ</a></li>
            </ul>
        </div>
        <div class="header-content">
@@ -24,27 +27,28 @@
                <a class="header-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a><br>
                г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
            </address>
-           <ul class="user-navigation">
-               <li class="login-link"><a href="#">Войти</a></li>
-               <li class="check-in"><a href="#">Регистрация</a></li>
+           <ul class="auth">
+               <li><a class="login-link" href="#">Войти</a></li>
+               <li><a class="check-in" href="#">Регистрация</a></li>
            </ul>
        </div>
        <nav class="main-navigation">
            <ul class="site-navigation">
                <li><a href="#">Главная</a></li>
-               <li><a href="about-us.html">Компания</a></li>
+               <li><a href="#">Компания</a></li>
                <li><a href="catalog.html">Каталог</a></li>
-               <li><a href="news.html">Новости</a></li>
-               <li><a href="special-offers.html">Спецпредложения</a></li>
-               <li><a href="contacts.html">Контакты</a></li>
+               <li><a href="#">Новости</a></li>
+               <li><a href="#">Спецпредложения</a></li>
+               <li><a href="#">Контакты</a></li>
            </ul>
        </nav>
    </header>
 
    <main class="container">
+    <!-- Оформлять после основного задания
      <section class="services">
          <h2 class="visually-hidden">Услуги</h2>
-         <!-- Оставить на потом не понятна сетка-->
+
      </section>
 
      <section class="popular-goods">
@@ -120,33 +124,35 @@
              <li class="brand-item"><a href=""><img src="img/brand-metabo.jpg" alt="metabo"></a></li>
          </ul>
      </section>
+-->
+    <div class="index-columns"><!--Проверить-->
+         <section class="features">
+             <h2>Компания «Техномарт»</h2>
+             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+             <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
+             <ul class="trans-comp">
+                 <li>Деловые линии</li>
+                 <li>Автотрейдинг</li>
+                 <li>ЖелДорЭкспедиция</li>
+             </ul>
+             <a class="btn" href="#">Подробнее о компании</a>
+         </section>
 
-     <section class="features">
-         <h2>Компания «Техномарт»</h2>
-         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-         <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
-         <ul>
-             <li>Деловые линии</li>
-             <li>Автотрейдинг</li>
-             <li>ЖелДорЭкспедиция</li>
-         </ul>
-         <a class="btn" href="#">Подробнее о компании</a>
-     </section>
-
-     <section class="contacts">
-         <h2>Контакты</h2>
-         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-         <a href="#" aria-label="Открыть карту">
-             <img src="img/map.jpg" width="300" height="158" alt="Карта">
-         </a>
-         <a class="btn" href="#">Заблудились? Напишите нам!</a>
-     </section>
+         <section class="contacts">
+             <h2>Контакты</h2>
+             <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+             <a href="#" aria-label="Открыть карту">
+                 <img src="img/map.jpg" width="300" height="158" alt="Карта">
+             </a>
+             <a class="btn" href="#">Заблудились? Напишите нам!</a>
+         </section>
+     </div>
 
    </main>
 
    <footer class="main-footer">
       <div class="footer-header">
-          <a class="header-logo"><img src="img/icon/logo-technomart.svg" alt="Логотип магазина ТЕХНОМАРТ"></a>
+          <a class="footer-logo"><img src="img/icon/logo-technomart.svg" alt="Логотип магазина ТЕХНОМАРТ"></a>
           <address class="footer-contacts">
               г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
               <a class="footer-contacts-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -192,11 +198,11 @@
             </ul>
            <p class="feedback">
                Обратная связь:
-               <a class="btn" href="#">mailto:mail@htmlacademy.ru</a>
+               <a class="btn-feedback" href="#">mailto:mail@htmlacademy.ru</a>
            </p>
            <p class="develop">
                Разработано:
-               <a class="btn" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+               <a class="btn-feedback" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
            </p>
        </div>
    </footer>
@@ -209,12 +215,12 @@
                 <input id="user-name" type="text" name="name" placeholder="Имя Фамилия">
             </p>
             <p>
-                <label for="user-email">Ваше e-mail:</label>
+                <label for="user-email">Ваш e-mail:</label>
                 <input id="user-email" type="email" name="email" placeholder="email@example.com">
             </p>
             <p>
                 <label for="user-letter">Текст письма:</label>
-                <textarea id="user-letter" name="letter" rows="7">В свободной форме</textarea>
+                <textarea id="user-letter" name="letter" rows="7" placeholder="В свободной форме"></textarea>
             </p>
             <button class="btn" type="submit">Отправить</button>
         </form>
